<?xml version="1.0"?>
<package format="2">
  <name>grasp_interface</name>
  <version>0.0.1</version>
  <description>Easy connection to and control of robotiq gripper</description>

  <maintainer email="mwhorn@utexas.edu">Matt Horn</maintainer>

  <license>BSD 3-paragraph</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>obj_interface</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>robotiq_s_model_control</depend>
  <depend>robotiq_c_model_control</depend>

  <export>
  </export>
</package>
